# example-fast-api-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Brewfile  CHANGELOG.md  Dockerfile  Dockerfile.jinja  Makefile  README.md  README.md.jinja  copier.yml  docker-compose.acceptance-tests.yml  docker-compose.yml  pull_request_template.md  pyproject.toml  pyproject.toml.jinja  sonar-project.properties  sonar-project.properties.jinja  supervisord.conf  supervisord.conf.jinja
.circleci/: config.yml  config.yml.jinja
.github/: CODEOWNERS  dependabot.yml
src/fast_api_template/: main.py
src/fast_api_template/common/: globals.py  require_auth.py
src/{{project_name_underscores}}/: healthcheck.py  main.py.jinja
src/{{project_name_underscores}}/common/: globals.py.jinja  require_auth.py.jinja
template-docs/: HOW-TO.md  HOW-TO.md.jinja
template-docs/sdbi-aks-templates/applicationsets/: fast-api-template.yaml  {{project_name_hyphens}}.yaml.jinja
template-docs/sdbi-aks-templates/fast-api-template/: Chart.yaml  values.yaml
template-docs/sdbi-aks-templates/fast-api-template/templates/: fast-api-template-analysis.yaml  fast-api-template-ingress.yaml  fast-api-template-rollout.yaml  fast-api-template-service.yaml
template-docs/sdbi-aks-templates/{{project_name_hyphens}}/: Chart.yaml.jinja  values.yaml.jinja
template-docs/sdbi-aks-templates/{{project_name_hyphens}}/templates/: {{project_name_hyphens}}-analysis.yaml.jinja  {{project_name_hyphens}}-ingress.yaml.jinja  {{project_name_hyphens}}-rollout.yaml.jinja  {{project_name_hyphens}}-service.yaml.jinja
tests/acceptance/features/: environment.py  hello.feature  project_validation.feature
tests/unit/: conftest.py  conftest.py.jinja
tests/unit/common/: test_require_auth.py
(+1 files in other folders)
